[package]
name = "wialon-rs"
version = "0.1.0"
authors = ["Thomas Nicollet <thomas.nicollet@nebulis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["json"] }
serde_repr = "*"
serde_urlencoded = "*"
serde_json = "*"
async-trait = "*"