[package]
name = "wialon-rs"
version = "0.2.0"
authors = ["Thomas Nicollet <thomas.nicollet@nebulis.io>"]
edition = "2018"
license = "MIT"
description = "Wialon API friendly lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.*", features = ["json"] }
serde_repr = "0.1.*"
serde_urlencoded = "0.7.*"
serde_json = "1"
async-trait = "0.1.*"